--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -32,7 +32,11 @@ body
 		width: 910px
 		// padding-bottom: 40px
 	&--services
-    	width: 1920px
+		width: 1920px
+	&--contact
+		width: 910px;
+
+
 
 /* --- navigation --- */
 
@@ -143,7 +147,7 @@ body
         padding: 41px 63px
         margin: 60px 0 100px
 
-/* --- section about & about__client --- */
+/* --- title & text style --- */
 
 .title
 	position: relative
@@ -152,7 +156,9 @@ body
 	font-size: 42px
 	font-weight: 600
 	padding: 0 30px
+	line-height: 52px;
 	&--texted
+		padding-top: 24px
 		&:before
 			content: 'HOW WE CAN HELP YOU'
 			position: absolute
@@ -174,6 +180,11 @@ body
 		color: #ffffff
 		&:after
 			background-color: #fff
+	&--contact
+		margin: 0 50px
+		color: #ffffff
+		&:after
+			background-color: #fff
 .text
 	padding: 10px 0
 	line-height: 32px
@@ -186,10 +197,12 @@ body
 	&-portfolio
 		width: 500px
 		margin: 0 auto
+
+/* --- section about & about__client --- */
+
 .about
 	background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%)
 	text-align: center
-	// padding-top: 140px
 	&__img
 		margin: 40px 0 10px
 	&__client
@@ -267,6 +280,7 @@ body
 /* --- section portfolio --- */
 
 .portfolio 
+	background: linear-gradient(30deg, #eff5fa 0%, #fff 80%, #fff 100%)
 	&__item
 		display: block
 		text-align: left
@@ -312,9 +326,39 @@ body
 	float: left
 	margin-right: 10px
 	padding: 5px 13px 5px 14px
-	border-radius: 10px;
-	border: 1px solid #606f85;
-	color: #29384d;
-	font-size: 11px;
-	font-weight: 600;
-	text-transform: uppercase;
+	border-radius: 10px
+	border: 1px solid #606f85
+	color: #29384d
+	font-size: 11px
+	font-weight: 600
+	text-transform: uppercase
+
+/* --- section contact --- */
+
+.contact
+	background: linear-gradient(to top left, #7542bb 0%, #c75eb4 80%, #c75eb4 100%)
+
+.form-field
+	position: relative
+	margin: 20px
+	&__icon
+		position: absolute
+		top: 24px;
+		left: 20px;
+
+// 	color: #fff
+
+.form-control
+	width: 100%
+	height: 64px
+	padding-left: 50px
+	color: #ffffff;
+	font-family: Poppins;
+	font-size: 17px;
+	font-weight: 300;
+	border-radius: 5px
+	border: 2px solid #ffffff
+	background-color: transparent;
+	opacity: 0.25;
+	&_texted
+		min-height: 125px;
